fix: remove center align in mobile

--- a/packages/style-kit/src/index.css
+++ b/packages/style-kit/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  @apply bg-neutral-100 dark:bg-neutral-800;
+body {
+  @apply prose prose-neutral dark:prose-invert md:prose-lg mx-auto p-4 md:p-6;
 }
 
-body {
-  @apply prose prose-neutral md:prose-lg mx-auto p-3 md:p-6;
+body.card {
+  @apply text-left;
 }
